# BevyAsteroids

./: .pre-commit-config.yaml  Cargo.toml  README.md
assets/: Asteroids Mini Engine.caproj  Asteroids Mini Engine.uistate.xml
assets/Files/: blip.m4a  boom.m4a  fire.m4a  hurt.m4a  lose.m4a  shoot.m4a  win.m4a
src/: asteroid.rs  bullet.rs  collision.rs  main.rs  player.rs  position.rs  velocity.rs
src/core/: asteroid.rs  audio.rs  bullet.rs  collision.rs  mod.rs  player.rs  position.rs  velocity.rs
src/ui/: menu.rs  mod.rs  pause.rs  score.rs
