[package]
name = "bevy_asteroids"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", features = ["mp3"] }
bevy_embedded_assets = "0.9.1"
rand = "0.8.5"
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.3"
